[package]
name = "r_bitcoin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.5.11", default-features = false }
rbitcoin-cli = { path = "cli"}
log = "0.4"
logs = { path = "logs" }



