[package]
name = "rbitcoin-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.2", default-features = false }
log = "0.4"
rpc = { path = "../rpc" }
db  = { path = "../db" }
p2p = { path = "../p2p" }

